SERVER-17405 Don't throw MsgAssertionException when getLog is given a non-string type

(cherry picked from commit 47bb531356b9ed6c007f0fb4f91104dea0de3a18)