src/mongo/db/dbcommands_generic.cpp
@@ -366,7 +366,14 @@ namespace mongo {
         }
 
         virtual bool run(OperationContext* txn, const string& dbname , BSONObj& cmdObj, int, string& errmsg, BSONObjBuilder& result, bool) {
-            string p = cmdObj.firstElement().String();
+            BSONElement val = cmdObj.firstElement();
+            if (val.type() != String) {
+                return appendCommandStatus(result, Status(ErrorCodes::TypeMismatch, str::stream()
+                    << "Argument to getLog must be of type String; found "
+                    << val.toString(false) << " of type " << typeName(val.type())));
+            }
+
+            string p = val.String();
             if ( p == "*" ) {
                 vector<string> names;
                 RamLog::getNames( names );
